--- a/index.html
+++ b/index.html
@@ -28,13 +28,36 @@
                     <nav>
                         <ul class="menu">
                             <li><a href="">Home</a></li>
-                            <li><a href="">Products</a></li>
+                            <li><a href="">Products</a>
+                                <ul class="submenu">
+                                    <li><a href="#">Lorem ipsum dolor</a></li>
+                                    <li><a href="#">Sit amet</a></li>
+                                    <li><a href="#">Officiis fuga</a></li>
+                                    <li><a href="#">Tenetur totam</a></li>
+                                    <li><a href="#">Repellendus</a></li>
+                                    <li><a href="#">Ipsa ratione</a></li>
+                                    <li><a href="#">Culpa distinctio</a></li>
+                                </ul>
+                            </li>
                             <li><a href="">Payment</a></li>
                             <li><a href="">Shipping</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-md-3">Search</div>
+                <div class="col-md-3">
+                    <form class="find" action="" method="get">
+                        <input type="search" name="search" id="" placeholder="search">
+                        <div class="find-img">
+                            <img src="images/icon (4).png" alt="">
+                        </div>
+                    </form>
+                    <div class="basket">
+                        <a class="basket-a" href="#">
+                            <img class="basket-img-1" src="images/icon (1).png" alt="">
+                            <img class="basket-img-2" src="images/icon (2).png" alt="">
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
