--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <nav>
                         <ul class="menu">
                             <li><a href="">Home</a></li>
-                            <li><a href="">Products</a>
+                            <li><a href="">Products 2</a>
                                 <div class="bird">&circ;</div>
                                 <ul class="submenu">
                                     <li><a href="#">Lorem ipsum dolor</a></li>
