corrected Products-Shiping and added slider

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <nav>
                         <ul class="menu">
                             <li><a href="">Home</a></li>
-                            <li><a href="">Products 2</a>
+                            <li><a href="">Products</a>
                                 <div class="bird">&circ;</div>
                                 <ul class="submenu">
                                     <li><a href="#">Lorem ipsum dolor</a></li>
@@ -41,7 +41,7 @@
                                 </ul>
                             </li>
                             <li><a href="">Payment</a></li>
-                            <li><a href="">Shipping 4</a></li>
+                            <li><a href="">Shipping</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -69,7 +69,9 @@
             </div>
         </div>
     </header>
-    <main class="main">Main</main>
+    <main class="main">
+        <div class="slider"></div>
+    </main>
     <footer class="footer">Footer</footer>
 
 </body>
