added files .png in image, drow oblique lines, adress and h1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-3 m5px">
                     <div class="logo">
                         <a href="#">
                             <img src="images/icon (3).png" alt="">
@@ -45,7 +45,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3 m5px">
                     <div class="row">
                         <div class="col-md-9">
                             <form class="search" action="" method="get">
@@ -55,7 +55,7 @@
                                 </button>
                             </form>
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-3 m5px">
                             <div class="cart">
                                 <a href="">
                                     <img class="cart-img1" src="images/icon (1).png" alt="">
@@ -71,6 +71,83 @@
     </header>
     <main class="main">
         <div class="slider"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <form class="parameters" action="" method="get">
+                        <fieldset>
+                            <p>device type</p>
+                            <label><input type="checkbox" name="laptop" id="">Laptop</label>
+                            <label><input type="checkbox" name="tablet" id="">Tablet</label>
+                        </fieldset>
+                        <fieldset>
+                            <p>color</p>
+                            <label><input type="checkbox" name="black" id="">Black</label>
+                            <label><input type="checkbox" name="red" id="">Red</label>
+                            <label><input type="checkbox" name="green" id="">Green</label>
+                            <label><input type="checkbox" name="blue" id="">Blue</label>
+                            <label><input type="checkbox" name="orange" id="">Orange</label>
+                        </fieldset>
+                        <fieldset>
+                            <p>ram</p>
+                            <label><input type="checkbox" name="gb1" id="">1GB</label>
+                            <label><input type="checkbox" name="gb2" id="">2GB</label>
+                            <label><input type="checkbox" name="gb4" id="">4GB</label>
+                            <label><input type="checkbox" name="gb6" id="">6GB</label>
+                            <label><input type="checkbox" name="gb8" id="">8GB</label>
+                        </fieldset>
+                        <a href="">Show more options ...</a>
+                        <button type="submit">submit</button>
+                    </form>
+                </div>
+                <div class="col-md-3">
+                    <div class="h165 pos">
+                        <div class="adress">
+                            <p>
+                                <a href="">Home page</a>&nbsp;&nbsp;>&nbsp;
+                                <a href="">Products</a>&nbsp;&nbsp;>&nbsp;
+                                <a href="">Laptop and Tablets</a>
+                            </p>
+                            <h1>Laptops and Tablets</h1>
+                        </div>
+
+                    </div>
+                    <div class="img-1">
+                        <div class="rot-left"></div>
+                        <div class="rot-right"></div>
+                    </div>
+                    <div class="product"></div>
+                </div>
+                <div class="col-md-3">
+                    <div class="h165">
+
+                    </div>
+                    <div class="img-2">
+                        <div class="rot-left"></div>
+                        <div class="rot-right"></div>
+                    </div>
+                    <div class="product"></div>
+                </div>
+                <div class="col-md-3">
+                    <div class="h165">
+                        <select name="sort" id="">
+                            <option selected value="price">sort by price</option>
+                            <option value="name">sort by name</option>
+                            <option value="date">sort by date</option>
+                            <option value="popularity">sort by popularity</option>
+                        </select>
+                    </div>
+
+
+                    <div class="img-3">
+                        <div class="rot-left"></div>
+                        <div class="rot-right"></div>
+                    </div>
+                    <div class="product"></div>
+                </div>
+            </div>
+        </div>
+
     </main>
     <footer class="footer">Footer</footer>
 
