work with select

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="h165">
-                        <select name="sort" id="">
+                        <select class="sort" name="sort" id="">
                             <option selected value="price">sort by price</option>
                             <option value="name">sort by name</option>
                             <option value="date">sort by date</option>
