--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                             <form class="search" action="" method="get">
                                 <input type="text" name="search" id="" placeholder="search">
                                 <button class="search-button" type="submit">
-                                    <img src="images/icon (4).png" alt="">
+                                    <!--<img src="images/icon (4).png" alt="">-->
                                 </button>
                             </form>
                         </div>
                         <div class="col-md-3 m5px">
                             <div class="cart">
                                 <a href="">
-                                    <img class="cart-img1" src="images/icon (1).png" alt="">
-                                    <img class="cart-img2" src="images/icon (2).png" alt="">
+                                    <!--<img class="cart-img1" src="images/icon (1).png" alt="">
+                                    <img class="cart-img2" src="images/icon (2).png" alt="">-->
                                 </a>
                                 <div class="product-count">0</div>
                             </div>
@@ -100,50 +100,100 @@
                         <button type="submit">submit</button>
                     </form>
                 </div>
-                <div class="col-md-3">
-                    <div class="h165 pos">
-                        <div class="adress">
-                            <p>
-                                <a href="">Home page</a>&nbsp;&nbsp;>&nbsp;
-                                <a href="">Products</a>&nbsp;&nbsp;>&nbsp;
-                                <a href="">Laptop and Tablets</a>
-                            </p>
-                            <h1>Laptops and Tablets</h1>
+                <div class="col-md-9">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="breadcrumbs">
+                                <p>
+                                    <a href="">Home page</a>&nbsp;&nbsp;>&nbsp;
+                                    <a href="">Products</a>&nbsp;&nbsp;>&nbsp;
+                                    <a href="">Laptop and Tablets</a>
+                                </p>
+
+                            </div>
                         </div>
-
-                    </div>
-                    <div class="img-1">
-                        <div class="rot-left"></div>
-                        <div class="rot-right"></div>
-                    </div>
-                    <div class="product"></div>
-                </div>
-                <div class="col-md-3">
-                    <div class="h165">
-
-                    </div>
-                    <div class="img-2">
-                        <div class="rot-left"></div>
-                        <div class="rot-right"></div>
-                    </div>
-                    <div class="product"></div>
-                </div>
-                <div class="col-md-3">
-                    <div class="h165">
-                        <select class="sort" name="sort" id="">
-                            <option selected value="price">sort by price</option>
-                            <option value="name">sort by name</option>
-                            <option value="date">sort by date</option>
-                            <option value="popularity">sort by popularity</option>
-                        </select>
                     </div>
 
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="h1">
+                                <h1>Laptops and Tablets</h1>
+                            </div>
 
-                    <div class="img-3">
-                        <div class="rot-left"></div>
-                        <div class="rot-right"></div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="h46">
+                                <select class="sort" name="sort" id="">
+                                    <option selected value="price">sort by price</option>
+                                    <option value="name">sort by name</option>
+                                    <option value="date">sort by date</option>
+                                    <option value="popularity">sort by popularity</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
-                    <div class="product"></div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="images/icon (17).png" alt="">
+                                    <div class="rot-left"></div>
+                                    <div class="rot-right"></div>
+                                    <div class="zoom"></div>
+                                    <div class="like"></div>
+                                </div>
+                                <div class="product-body">
+                                    <div class="product-title">
+                                        <h3>#1 Device Name</h3>
+                                    </div>
+                                    <div class="product-description">
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                    </div>
+                                    <div class="product-features">
+                                        <p><span>type: </span>Laptop</p>
+                                        <p><span>screen size: </span>7 inches</p>
+                                        <p><span>ram: </span>1GB</p>
+                                    </div>
+                                    <div class="product-price">
+                                        $599<sup>25</sup>
+                                        М<sup>2</sup>
+                                    </div>
+                                    <button class="btn btn-more-details">More details</button>
+                                    <button class="btn btn-add-to-cart">Add to cart</button>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="images/icon (9).png" alt="">
+                                    <div class="rot-left"></div>
+                                    <div class="rot-right"></div>
+                                    <div class="zoom"></div>
+                                    <div class="like"></div>
+                                </div>
+                                <div class="product-body"></div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-4">
+                            <div class="product">
+                                <div class="product-image">
+                                    <img src="images/icon (10).png" alt="">
+                                    <div class="rot-left"></div>
+                                    <div class="rot-right"></div>
+                                    <div class="zoom"></div>
+                                    <div class="like"></div>
+                                </div>
+                                <div class="product-body"></div>
+                            </div>
+
+
+
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
