--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
             </div>
         </div>
     </main>
-    <footer class="footer">&copy;Copyright 2017</footer>
+    <footer class="footer">&copy;&nbsp;Copyright 2017</footer>
 
 </body>
 
