added parameters block

--- a/index.html
+++ b/index.html
@@ -76,27 +76,63 @@
                     <form class="parameters" action="" method="get">
                         <fieldset>
                             <p>device type</p>
-                            <label><input type="checkbox" name="laptop" id="">Laptop</label>
-                            <label><input type="checkbox" name="tablet" id="">Tablet</label>
+                            <div>
+                                <input type="checkbox" name="laptop" id="lap">
+                                <label for="lap">&nbsp;&nbsp;Laptop</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="tablet" id="tabl">
+                                <label for="tabl">&nbsp;&nbsp;Tablet</label>
+                            </div>
                         </fieldset>
                         <fieldset>
                             <p>color</p>
-                            <label><input type="checkbox" name="black" id="">Black</label>
-                            <label><input type="checkbox" name="red" id="">Red</label>
-                            <label><input type="checkbox" name="green" id="">Green</label>
-                            <label><input type="checkbox" name="blue" id="">Blue</label>
-                            <label><input type="checkbox" name="orange" id="">Orange</label>
+                            <div>
+                                <input type="checkbox" name="black" id="black">
+                                <label for="black">&nbsp;&nbsp;Black</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="red" id="red">
+                                <label for="red">&nbsp;&nbsp;Red</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="green" id="green">
+                                <label for="green">&nbsp;&nbsp;Green</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="blue" id="blue">
+                                <label for="blue">&nbsp;&nbsp;Blue</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="orange" id="orange">
+                                <label for="orange">&nbsp;&nbsp;Orange</label>
+                            </div>
                         </fieldset>
                         <fieldset>
                             <p>ram</p>
-                            <label><input type="checkbox" name="gb1" id="">1GB</label>
-                            <label><input type="checkbox" name="gb2" id="">2GB</label>
-                            <label><input type="checkbox" name="gb4" id="">4GB</label>
-                            <label><input type="checkbox" name="gb6" id="">6GB</label>
-                            <label><input type="checkbox" name="gb8" id="">8GB</label>
+                            <div>
+                                <input type="checkbox" name="gb1" id="gb1">
+                                <label for="gb1">&nbsp;&nbsp;1GB</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="gb2" id="gb2">
+                                <label for="gb2">&nbsp;&nbsp;2GB</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="gb4" id="gb4">
+                                <label for="gb4">&nbsp;&nbsp;4GB</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="gb6" id="gb6">
+                                <label for="gb6">&nbsp;&nbsp;6GB</label>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="gb8" id="gb8">
+                                <label for="gb8">&nbsp;&nbsp;8GB</label>
+                            </div>
                         </fieldset>
                         <a href="">Show more options ...</a>
-                        <button type="submit">submit</button>
+                        <button class="btn btn-more-details" type="submit">submit</button>
                     </form>
                 </div>
                 <div class="col-md-9">
