--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <!--<img class="cart-img1" src="images/icon (1).png" alt="">
                                     <img class="cart-img2" src="images/icon (2).png" alt="">-->
                                 </a>
-                                <div class="product-count">0</div>
+                                <div class="product-count" id="product-count">0</div>
                             </div>
                         </div>
                     </div>
@@ -463,7 +463,22 @@
         </div>
     </main>
     <footer class="footer">&copy;&nbsp;Copyright 2017</footer>
-
+    <div class="modal">
+        <div class="modal-block">
+            <form>
+                <div class="btn-close">x</div>
+                <h3>Please call for more details</h3>
+                <div class="form-field">
+                    <input type="text" name="" id="" placeholder="You name">
+                </div>
+                <div class="form-field">
+                    <input type="text" name="" id="" placeholder="You phone">
+                </div>
+                <button>Please call</button>
+            </form>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
