--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Shop project</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -69,7 +71,19 @@
         </div>
     </header>
     <main class="main">
-        <div class="slider"></div>
+        <!--Slider-->
+        <div class="slider">
+            <div class="container">
+                <div class="row">
+                    <div class="slider-block">
+                        <div>Slider 1</div>
+                        <div>Slider 2</div>
+                        <div>Slider 3</div>
+                        <div>Slider 4</div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -190,6 +204,12 @@
                                         <div class="product-price">
                                             $599<sup>25</sup>
                                         </div>
+                                        <!--products-quantity 1-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
+                                        </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
                                             <img src="images/icon (2).png" alt="">
@@ -221,6 +241,12 @@
                                         <div class="product-price">
                                             $1250<sup>99</sup>
                                         </div>
+                                        <!--products-quantity 2-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
+                                        </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
                                             <img src="images/icon (2).png" alt="">
@@ -251,6 +277,12 @@
                                         </div>
                                         <div class="product-price">
                                             $399<sup>50</sup>
+                                        </div>
+                                        <!--products-quantity 3-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
                                         </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
@@ -287,6 +319,12 @@
                                         <div class="product-price">
                                             $599<sup>25</sup>
                                         </div>
+                                        <!--products-quantity 4-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
+                                        </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
                                             <img src="images/icon (2).png" alt="">
@@ -318,6 +356,12 @@
                                         <div class="product-price">
                                             $1250<sup>99</sup>
                                         </div>
+                                        <!--products-quantity 5-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
+                                        </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
                                             <img src="images/icon (2).png" alt="">
@@ -348,6 +392,12 @@
                                         </div>
                                         <div class="product-price">
                                             $399<sup>50</sup>
+                                        </div>
+                                        <!--products-quantity 6-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
                                         </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
@@ -384,6 +434,12 @@
                                         <div class="product-price">
                                             $599<sup>25</sup>
                                         </div>
+                                        <!--products-quantity 7-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
+                                        </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
                                             <img src="images/icon (2).png" alt="">
@@ -415,6 +471,12 @@
                                         <div class="product-price">
                                             $1250<sup>99</sup>
                                         </div>
+                                        <!--products-quantity 8-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
+                                        </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
                                             <img src="images/icon (2).png" alt="">
@@ -445,6 +507,12 @@
                                         </div>
                                         <div class="product-price">
                                             $399<sup>50</sup>
+                                        </div>
+                                        <!--products-quantity 9-->
+                                        <div class="products-quantity">
+                                            <button class="decrement-button">-</button>
+                                            <input type="text" value="1">
+                                            <button class="increment-button">+</button>
                                         </div>
                                         <button class="btn btn-more-details">More details</button>
                                         <button class="btn btn-add-to-cart">Add to cart&nbsp;
@@ -478,6 +546,9 @@
             </form>
         </div>
     </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="app.js"></script>
 </body>
 
